<resources>
    <string name="app_name">TargetCaseStudy</string>

    <!-- Credit card validation strings. You do not need to make changes here. -->
    <string name="credit_card_payment_title">Credit Card Payment</string>
    <string name="credit_card_payment_subtitle">Note: you do NOT need to enter real data</string>

    <string name="submit">Submit</string>
    <string name="cancel">Cancel</string>
    <string name="credit_card_number_hint">Credit card number</string>
    <string name="close_caps">CLOSE</string>
    <string name="something_went_wrong">Something went wrong Please try again later !!</string>
    <string name="hint_ship_or">Ship or</string>
    <string name="add_to_list">Add to List</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="valid_credit_card">Please enter a valid credit card number</string>
    <string name="retry">Retry</string>
</resources>
